--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "build": "concurrently \"snapp build --minify\" \"tailwindcss -i style/input.css -o style/output.css --minify\""
 },
   "devDependencies": {
+    "@tailwindcss/line-clamp":"^0.4.4",
     "concurrently": "^9.2.1",
     "tailwindcss": "^3.4.18"
   }
